Details
-
Bug
-
Resolution: Fixed
-
P2
-
15
-
b14
-
Verified
Description
The assertion was observed when running the JCK test api/java_lang/Class/Reflect.html with -Xcomp -XX:-TieredCompilation.
Stack: [0x00007ff520535000,0x00007ff520636000], sp=0x00007ff520632300, free space=1012k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x15db3da] SubTypeCheckNode::Ideal(PhaseGVN*, bool)+0x11fa
V [libjvm.so+0x1313d2c] PhaseGVN::transform_no_reclaim(Node*)+0x7c
V [libjvm.so+0xb57d53] GraphKit::gen_subtype_check(Node*, Node*)+0x123
V [libjvm.so+0xfd44e8] LibraryCallKit::inline_native_subtype_check()+0x628
V [libjvm.so+0xfe847f] LibraryIntrinsic::generate(JVMState*)+0xbf
V [libjvm.so+0x9835d5] Parse::do_call()+0x4f5
…
Reproduction:
jdk/bin/java -XX:+ReplayCompiles -XX:ReplayDataFile=replay_pid8846.log -XX:+ReplayIgnoreInitErrors -Xcomp -XX:-TieredCompilation --enable-preview -classpath JCK-runtime-15/lib/javatest.jar:JCK-runtime-15/classes:JCK-runtime-15/lib/jtjck.jar:JCK-runtime-15/lib/extensions/JCK-extensions.jar -Djava.security.policy=JCK-runtime-15/lib/jck.policy com.sun.jck.lib.ExecJCKTestSameJVMCmd -loadDir JCK-runtime-15/classes: javasoft.sqe.tests.api.java.lang.Class.ReflectTests -TestURL file:JCK-runtime-15/tests/api/java_lang/Class/Reflect.html
Stack: [0x00007ff520535000,0x00007ff520636000], sp=0x00007ff520632300, free space=1012k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x15db3da] SubTypeCheckNode::Ideal(PhaseGVN*, bool)+0x11fa
V [libjvm.so+0x1313d2c] PhaseGVN::transform_no_reclaim(Node*)+0x7c
V [libjvm.so+0xb57d53] GraphKit::gen_subtype_check(Node*, Node*)+0x123
V [libjvm.so+0xfd44e8] LibraryCallKit::inline_native_subtype_check()+0x628
V [libjvm.so+0xfe847f] LibraryIntrinsic::generate(JVMState*)+0xbf
V [libjvm.so+0x9835d5] Parse::do_call()+0x4f5
…
Reproduction:
jdk/bin/java -XX:+ReplayCompiles -XX:ReplayDataFile=replay_pid8846.log -XX:+ReplayIgnoreInitErrors -Xcomp -XX:-TieredCompilation --enable-preview -classpath JCK-runtime-15/lib/javatest.jar:JCK-runtime-15/classes:JCK-runtime-15/lib/jtjck.jar:JCK-runtime-15/lib/extensions/JCK-extensions.jar -Djava.security.policy=JCK-runtime-15/lib/jck.policy com.sun.jck.lib.ExecJCKTestSameJVMCmd -loadDir JCK-runtime-15/classes: javasoft.sqe.tests.api.java.lang.Class.ReflectTests -TestURL file:JCK-runtime-15/tests/api/java_lang/Class/Reflect.html
Attachments
Issue Links
- relates to
-
JDK-8238691 C2: turn subtype check into macro node
- Resolved
-
JDK-8241041 C2: "assert((Value(phase) == t) || (t != TypeInt::CC_GT && t != TypeInt::CC_EQ)) failed: missing Value() optimization" still happens after fix for 8239335
- Closed